--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.1.0",
     "gh-pages": "^6.0.0",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-window": "^1.8.9",
